syntax = "proto3";

package pp_user;

service UserService {
  rpc GetProfileById(UserId) returns (Profile);
  rpc VerifyUserByMail(UserEmail) returns (User);
  rpc CreateUser(Profile) returns (User);
}

message OptionalUser {
  User user = 1;
}

message OptionalProfile {
  Profile profile = 1;
}

message Profile {
  string googleId = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string pictureUrl = 5;
}

message UserEmail {
  string email = 1;
}

message UserId {
  string id = 1;
}

message UserParam {
  optional string id = 1;
  optional string email = 2;
}

message User {
  string id = 1;
  string email = 2;
}
